fixed info on about, fixed the company logo too big for apply, job, about

--- a/styles/jobs.css
+++ b/styles/jobs.css
@@ -85,3 +85,10 @@ footer p {
     }
 }
 
+img.logo {
+    width: 120px !important; 
+    height: auto !important;
+    border-radius: 10px !important;
+}
+
+
