--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,8 @@ header {
     color: white;
 }
 /*Company logo*/
-#logo {
-    width: 128px;
+.logo {
+    width: 120px;
     border-radius: 10px;
 }
 /*Removes the list dots*/
